--- a/resources.html
+++ b/resources.html
@@ -170,7 +170,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                 <div class="product__inner col-md-12 col-sm-2">
                   <div class="pro__thumb">
                     <a href="#">
-                      <img src="images/product/1.png" alt="product images">
+                      <img src="images/resource_thumbnails/Sign-01.jpg" alt="Sign_01">
                     </a>
                   </div>
                 </div>
@@ -179,7 +179,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                   <p>Lorem ipsum dolor sit amet <br />
                       consectetur adipisicing.</p>
                   <div class="download__single">
-                    <i class="zmdi zmdi-download"></i>
+                    <a href="images/resource_thumbnails/Sign-01.jpg" download="Sign_01">
+                      <i class="zmdi zmdi-download"></i>
+                    </a>
                   </div>
                 </div>
               </div>
