--- a/resources.html
+++ b/resources.html
@@ -169,9 +169,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
               <div class="product foo">
                 <div class="product__inner col-md-12 col-sm-2">
                   <div class="pro__thumb">
-                    <a href="#">
                       <img src="images/resource_thumbnails/Sign-01.jpg" alt="Sign_01">
-                    </a>
                   </div>
                 </div>
                 <div class="product__details col-md-12 col-sm-10">
@@ -192,9 +190,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
               <div class="product foo">
                 <div class="product__inner col-md-12 col-sm-2">
                   <div class="pro__thumb">
-                    <a href="#">
-                      <img src="images/product/1.png" alt="product images">
-                    </a>
+                      <img src="images/resource_thumbnails/Sign-02.jpg" alt="Sign_02">
                   </div>
                 </div>
                 <div class="product__details col-md-12 col-sm-10">
@@ -202,7 +198,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                   <p>Lorem ipsum dolor sit amet <br />
                       consectetur adipisicing.</p>
                   <div class="download__single">
-                    <i class="zmdi zmdi-download"></i>
+                    <a href="images/resource_thumbnails/Sign-02.jpg" download="Sign_02">
+                      <i class="zmdi zmdi-download"></i>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -213,9 +211,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
               <div class="product foo">
                 <div class="product__inner col-md-12 col-sm-2">
                   <div class="pro__thumb">
-                    <a href="#">
-                      <img src="images/product/1.png" alt="product images">
-                    </a>
+                      <img src="images/resource_thumbnails/Sign-03.jpg" alt="Sign_03">
                   </div>
                 </div>
                 <div class="product__details col-md-12 col-sm-10">
@@ -223,7 +219,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                   <p>Lorem ipsum dolor sit amet <br />
                       consectetur adipisicing.</p>
                   <div class="download__single">
-                    <i class="zmdi zmdi-download"></i>
+                    <a href="images/resource_thumbnails/Sign-03.jpg" download="Sign_03">
+                      <i class="zmdi zmdi-download"></i>
+                    </a>
                   </div>
                 </div>
               </div>
