Uploaded full res resources with downloadable zips

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
             <div class="col-md-10 col-lg-10 d-none d-md-block">
               <nav class="mainmenu__nav  d-none d-lg-block">
                 <ul class="main__menu">
-                  <li><a href="about.html">About</a></li>
-                  <li class="drop"><a href="resources.html">Resources</a>
+                  <li><a href="about.html" title="About">About</a></li>
+                  <li class="drop"><a href="resources.html" title="Resource">Resources</a>
               </nav>
 
               <!-- Start Mobile menu -->
               <div class="mobile-menu clearfix d-block d-lg-none">
                 <nav id="mobile_dropdown">
                   <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="about.html" title="About">About</a></li>
+                    <li><a href="resources.html" title="Resource">Resources</a></li>
                   </ul>
                 </nav>
               </div>
@@ -159,7 +159,7 @@
     <!-- Start Download Button Area -->
     <section class="htc__store__area ptb--120 bg__white">
       <div class="container">
-        <div class="resource__btn">
+        <div class="home resource__btn">
           <a href="#">Download the resources</a>
         </div>
       </div>
