--- a/about.html
+++ b/about.html
@@ -51,16 +51,16 @@
             <div class="col-md-10 col-lg-10 d-none d-md-block">
               <nav class="mainmenu__nav  d-none d-lg-block">
                 <ul class="main__menu">
-                  <li><a href="about.html">About</a></li>
-                  <li class="drop"><a href="resources.html">Resources</a>
+                  <li><a href="about.html" title="About">About</a></li>
+                  <li class="drop"><a href="resources.html" title="Resource">Resources</a>
               </nav>
 
               <!-- Start Mobile menu -->
               <div class="mobile-menu clearfix d-block d-lg-none">
                 <nav id="mobile_dropdown">
                   <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="about.html" title="About">About</a></li>
+                    <li><a href="resources.html" title="Resource">Resources</a></li>
                   </ul>
                 </nav>
               </div>
