--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <header id="header" class="htc-header">
       <!-- Start Mainmenu Area -->
       <div id="sticky-header-with-topbar" class="mainmenu__area">
-        <div class="container">
+        <div class="container-fluid col-sm-10">
           <div class="row">
             <div class="col-md-2 col-lg-2 col-4">
               <div class="logo">
@@ -84,6 +84,7 @@
       </div>
     </div>
     <!-- End header image -->
+    
     <!-- Start About Area -->
     <section class="htc__store__area ptb--120 bg__white">
       <div class="container">
