--- a/resources.html
+++ b/resources.html
@@ -37,7 +37,7 @@
     <header id="header" class="htc-header">
       <!-- Start Mainmenu Area -->
       <div id="sticky-header-with-topbar" class="mainmenu__area">
-        <div class="container">
+        <div class="container-fluid col-sm-10">
           <div class="row">
             <div class="col-md-2 col-lg-2 col-4">
               <div class="logo">
