Google icons linked

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <link rel="stylesheet" href="css/responsive.css">
   <!-- User style -->
   <link rel="stylesheet" href="css/custom.css">
+    <!-- Google icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
   <!-- Modernizr JS -->
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
