Added resource page link to home and about

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
       </div>
     </div>
     <!-- End header image -->
-    
+
     <!-- Start About Area -->
     <section class="htc__store__area ptb--120 bg__white">
       <div class="container">
@@ -99,7 +99,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                 <p>Lorem ipsum dolor sit amet, </br> consectetur adipiscing elit </br>sed do eiusmod tempor </br></br>#000 0000 0000
 </br>dolorsitamet@consectetur.com</p>
                 <div class="resource__btn">
-                  <a href="#">Download the resources</a>
+                  <a href="resources.html">See the resources</a>
                 </div>
               </div>
             </div>
@@ -129,7 +129,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                 </div>
                 <ul class="footer__menu">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="contact.html">About</a></li>
+                  <li><a href="about.html">About</a></li>
                   <li><a href="resources.html">Resources</a></li>
                 </ul>
               </div>
