--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <section class="htc__store__area ptb--120 bg__white">
       <div class="container">
         <div class="home resource__btn">
-          <a href="#">Download the resources</a>
+          <a href="resources.html">See the resources</a>
         </div>
       </div>
     </section>
@@ -189,7 +189,7 @@
                 </div>
                 <ul class="footer__menu">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="contact.html">About</a></li>
+                  <li><a href="about.html">About</a></li>
                   <li><a href="resources.html">Resources</a></li>
                 </ul>
               </div>
