--- a/resources.html
+++ b/resources.html
@@ -623,7 +623,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                 </div>
                 <ul class="footer__menu">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="contact.html">About</a></li>
+                  <li><a href="about.html">About</a></li>
                   <li><a href="resources.html">Resources</a></li>
                 </ul>
               </div>
