Added dummy toolbox file and risk assement panel

--- a/resources.html
+++ b/resources.html
@@ -104,7 +104,7 @@
     <!-- End About -->
 
 
-    <!-- Start Feature Product -->
+    <!-- Start Feature Product 1 -->
     <div class="container">
       <div class="row">
         <div class="col-12 single__pro">
@@ -112,7 +112,7 @@
             <div class="product__inner col-md-4 col-sm-12">
               <div class="pro__thumb">
                 <a href="#">
-                  <img src="images/product/1.png" alt="product images">
+                  <img src="images/resource_thumbnails/Sign-01.jpg" alt="Toolbox_talk">
                 </a>
               </div>
             </div>
@@ -122,7 +122,36 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             </div>
             <div class="download__single">
-              <i class="zmdi zmdi-download"></i>
+              <a href="resources/Dummy_toolbox_talk.zip" download="Tool_box_zip">
+                <i class="zmdi zmdi-download"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Feature Product -->
+    <!-- Start Feature Product 2 -->
+    <div class="container">
+      <div class="row">
+        <div class="col-12 single__pro">
+          <div class="product foo">
+            <div class="product__inner col-md-4 col-sm-12">
+              <div class="pro__thumb">
+                <a href="#">
+                  <img src="images/resource_thumbnails/Sign-02.jpg" alt="Risk_assement">
+                </a>
+              </div>
+            </div>
+            <div class="product__details col-md-8 col-sm-12">
+              <h2>Toolbox Talk</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+            <div class="download__single">
+              <a href="resources/Dummy_toolbox_talk.zip" download="Risk_assement_zip">
+                <i class="zmdi zmdi-download"></i>
+              </a>
             </div>
           </div>
         </div>
