--- a/resources.html
+++ b/resources.html
@@ -144,7 +144,7 @@
               </div>
             </div>
             <div class="product__details col-md-8 col-sm-12">
-              <h2>Toolbox Talk</h2>
+              <h2>Risk assement</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             </div>
