--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,8 @@
   <!-- Place favicon.ico in the root directory -->
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
+  <!-- Google font Sen -->
+  <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
   <!-- Bootstrap Fremwork Main Css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- All Plugins css -->
