--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header id="header" class="htc-header">
       <!-- Start Mainmenu Area -->
       <div id="sticky-header-with-topbar" class="mainmenu__area">
-        <div class="container-fluid col-sm-10">
+        <div class="container">
           <div class="row">
             <div class="col-md-2 col-lg-2 col-4">
               <div class="logo">
@@ -70,8 +70,9 @@
               </div>
             </div>
             <!-- End Mobile Menu  -->
+            <div class="col-md-12 mobile-menu-area"></div>
           </div>
-          <div class="mobile-menu-area"></div>
+
         </div>
       </div>
       <!-- End Main Menu Area -->
@@ -108,7 +109,7 @@
 
     <!-- Start Video -->
     <section class="htc__choose__us__ares bg__white lp_video">
-      <div class="container-fluid col-md-10">
+      <div class="container">
         <div class="row justify-content-sm-center">
           <div class="video-frame col-sm-10 col-lg-6">
             <div class="video__wrap bg--3" data--black__overlay="8">
@@ -135,7 +136,7 @@
 
     <!-- Start Video -->
     <section class="htc__choose__us__ares bg__white lp_video">
-      <div class="container-fluid col-md-10">
+      <div class="container">
         <div class="row justify-content-sm-center">
           <div class="video-frame col-sm-10 col-lg-6">
             <div class="video__wrap bg--3" data--black__overlay="8">
