--- a/resources.html
+++ b/resources.html
@@ -40,7 +40,7 @@
     <header id="header" class="htc-header">
       <!-- Start Mainmenu Area -->
       <div id="sticky-header-with-topbar" class="mainmenu__area">
-        <div class="container-fluid col-sm-10">
+        <div class="container">
           <div class="row">
             <div class="col-md-2 col-lg-2 col-4">
               <div class="logo">
@@ -69,8 +69,9 @@
               </div>
             </div>
             <!-- End Mobile Menu  -->
+            <div class="col-md-12 mobile-menu-area"></div>
           </div>
-          <div class="mobile-menu-area"></div>
+
         </div>
       </div>
       <!-- End Main Menu Area -->
