--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <header id="header" class="htc-header">
       <!-- Start Mainmenu Area -->
       <div id="sticky-header-with-topbar" class="mainmenu__area">
-        <div class="container-fluid col-sm-10">
+        <div class="container">
           <div class="row">
             <div class="col-md-2 col-lg-2 col-4">
               <div class="logo">
@@ -67,8 +67,9 @@
               </div>
             </div>
             <!-- End Mobile Menu  -->
+            <div class="col-md-12 mobile-menu-area"></div>
           </div>
-          <div class="mobile-menu-area"></div>
+
         </div>
       </div>
       <!-- End Main Menu Area -->
@@ -93,9 +94,9 @@
           <div class="col-sm-12">
             <div class="section__title section__title--2 text-left">
               <h2 class="title__line">About</h2>
-              <p class="col-md-8 col-sm-12 about_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+              <p class="col-lg-8 col-md-12 col-sm-12 about_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <div class="col-md-4 col-sm-12 contact_info">
+              <div class="col-lg-4 col-md-12 col-sm-12 contact_info">
                 <h3>Contact info</h3>
                 <p>Lorem ipsum dolor sit amet, </br> consectetur adipiscing elit </br>sed do eiusmod tempor </br></br>#000 0000 0000
 </br>dolorsitamet@consectetur.com</p>
